--- a/pom.xml
+++ b/pom.xml
@@ -919,14 +919,19 @@
                 <!--
                     org.junit.Test.class means "no category"
                 -->
-                <storage-impl-hbm.groups>org.junit.Test.class</storage-impl-hbm.groups>
+                <junit4.storage-impl-hbm.groups>
+                    image.persistence.repository.springtestconfig.InMemoryDbTestConfig.class
+                </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
-                    image.photos.misc.MiscTestCategory.class,
+                    image.photos.junit4.misc.MiscTestCategory.class,
                     image.photos.JsonMapperConfig.class,
                     image.photos.springtestconfig.InMemoryDbPhotosTestConfig.class
                 </junit4.photos.groups>
+                <junit5.storage-impl-hbm.groups>
+                    image.persistence.repository.springtestconfig.InMemoryDbTestConfig
+                </junit5.storage-impl-hbm.groups>
                 <junit5.photos.groups>
-                    image.photos.misc.MiscTestCategory,
+                    image.photos.junit4.misc.MiscTestCategory,
                     image.photos.JsonMapperConfig,
                     image.photos.springtestconfig.InMemoryDbPhotosTestConfig,
                     junit5&amp;photos&amp;inmemorydb
@@ -941,18 +946,24 @@
         <profile>
             <id>local-db</id>
             <properties>
-                <storage-impl-hbm.groups>
+                <junit4.storage-impl-hbm.groups>
+                    image.persistence.repository.springtestconfig.InMemoryDbTestConfig.class,
                     image.persistence.repository.springtestconfig.TestJdbcDsTestConfig.class,
                     image.persistence.repository.springtestconfig.ProdJdbcDsTestConfig.class
-                </storage-impl-hbm.groups>
+                </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
-                    image.photos.misc.MiscTestCategory.class,
+                    image.photos.junit4.misc.MiscTestCategory.class,
                     image.photos.JsonMapperConfig.class,
                     image.photos.springtestconfig.InMemoryDbPhotosTestConfig.class,
                     image.photos.springtestconfig.ProdJdbcDsPhotosTestConfig.class
                 </junit4.photos.groups>
+                <junit5.storage-impl-hbm.groups>
+                    image.persistence.repository.springtestconfig.InMemoryDbTestConfig,
+                    image.persistence.repository.springtestconfig.TestJdbcDsTestConfig,
+                    image.persistence.repository.springtestconfig.ProdJdbcDsTestConfig
+                </junit5.storage-impl-hbm.groups>
                 <junit5.photos.groups>
-                    image.photos.misc.MiscTestCategory,
+                    image.photos.junit4.misc.MiscTestCategory,
                     image.photos.JsonMapperConfig,
                     image.photos.springtestconfig.InMemoryDbPhotosTestConfig,
                     image.photos.springtestconfig.ProdJdbcDsPhotosTestConfig,
@@ -965,18 +976,24 @@
         <profile>
             <id>remote-db</id>
             <properties>
-                <storage-impl-hbm.groups>
+                <junit4.storage-impl-hbm.groups>
+                    image.persistence.repository.springtestconfig.InMemoryDbTestConfig.class,
                     image.persistence.repository.springtestconfig.TestJdbcDsTestConfig.class,
                     image.persistence.repository.springtestconfig.ProdJdbcDsTestConfig.class
-                </storage-impl-hbm.groups>
+                </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
-                    image.photos.misc.MiscTestCategory.class,
+                    image.photos.junit4.misc.MiscTestCategory.class,
                     image.photos.JsonMapperConfig.class,
                     image.photos.springtestconfig.InMemoryDbPhotosTestConfig.class,
                     image.photos.springtestconfig.ProdJdbcDsPhotosTestConfig.class
                 </junit4.photos.groups>
+                <junit5.storage-impl-hbm.groups>
+                    image.persistence.repository.springtestconfig.InMemoryDbTestConfig,
+                    image.persistence.repository.springtestconfig.TestJdbcDsTestConfig,
+                    image.persistence.repository.springtestconfig.ProdJdbcDsTestConfig
+                </junit5.storage-impl-hbm.groups>
                 <junit5.photos.groups>
-                    image.photos.misc.MiscTestCategory,
+                    image.photos.junit4.misc.MiscTestCategory,
                     image.photos.JsonMapperConfig,
                     image.photos.springtestconfig.InMemoryDbPhotosTestConfig,
                     image.photos.springtestconfig.ProdJdbcDsPhotosTestConfig,
