--- a/pom.xml
+++ b/pom.xml
@@ -544,6 +544,12 @@
                 <version>2.11.0</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>io.github.glytching</groupId>
+                <artifactId>junit-extensions</artifactId>
+                <version>1.1.0</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -625,6 +631,10 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.glytching</groupId>
+            <artifactId>junit-extensions</artifactId>
         </dependency>
     </dependencies>
 
