--- a/pom.xml
+++ b/pom.xml
@@ -950,7 +950,7 @@
                     image.photos.springtestconfig.InMemoryDbPhotosTestConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.InMemoryDbTestConfig
+                    junit5&amp;hbm&amp;inmemorydb
                 </junit5.storage-impl-hbm.groups>
                 <junit5.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory,
@@ -980,9 +980,9 @@
                     image.photos.springtestconfig.ProdJdbcDsPhotosTestConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.InMemoryDbTestConfig,
                     image.persistence.repository.springtestconfig.TestJdbcDsTestConfig,
-                    image.persistence.repository.springtestconfig.ProdJdbcDsTestConfig
+                    image.persistence.repository.springtestconfig.ProdJdbcDsTestConfig,
+                    junit5&amp;hbm&amp;inmemorydb
                 </junit5.storage-impl-hbm.groups>
                 <junit5.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory,
@@ -1010,9 +1010,9 @@
                     image.photos.springtestconfig.ProdJdbcDsPhotosTestConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.InMemoryDbTestConfig,
                     image.persistence.repository.springtestconfig.TestJdbcDsTestConfig,
-                    image.persistence.repository.springtestconfig.ProdJdbcDsTestConfig
+                    image.persistence.repository.springtestconfig.ProdJdbcDsTestConfig,
+                    junit5&amp;hbm&amp;inmemorydb
                 </junit5.storage-impl-hbm.groups>
                 <junit5.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory,
