--- a/pom.xml
+++ b/pom.xml
@@ -956,7 +956,8 @@
                     image.photos.junit4.misc.MiscTestCategory,
                     image.photos.JsonMapperConfig,
                     image.photos.springtestconfig.InMemoryDbPhotosTestConfig,
-                    junit5&amp;photos&amp;inmemorydb
+                    junit5&amp;photos&amp;inmemorydb,
+                    misc
                 </junit5.photos.groups>
                 <db.host>dummy-host</db.host>
                 <test.db.host>dummy-host</test.db.host>
@@ -989,7 +990,8 @@
                     image.photos.JsonMapperConfig,
                     image.photos.springtestconfig.InMemoryDbPhotosTestConfig,
                     image.photos.springtestconfig.ProdJdbcDsPhotosTestConfig,
-                    junit5&amp;photos&amp;inmemorydb
+                    junit5&amp;photos&amp;inmemorydb,
+                    misc
                 </junit5.photos.groups>
                 <db.host>127.0.0.1</db.host>
                 <test.db.host>127.0.0.1</test.db.host>
@@ -1019,7 +1021,8 @@
                     image.photos.JsonMapperConfig,
                     image.photos.springtestconfig.InMemoryDbPhotosTestConfig,
                     image.photos.springtestconfig.ProdJdbcDsPhotosTestConfig,
-                    junit5&amp;photos&amp;inmemorydb
+                    junit5&amp;photos&amp;inmemorydb,
+                    misc
                 </junit5.photos.groups>
                 <db.host>adrhc.go.ro</db.host>
                 <test.db.host>adrhc.go.ro</test.db.host>
