Order matters for @Bean({"mvcConversionService", "conversionService"}). PropertySourcesPlaceholderConfigurer for WebConfig (exifweb.properties).

--- a/webapp/src/main/resources/exifweb.properties
+++ b/webapp/src/main/resources/exifweb.properties
@@ -25,6 +25,7 @@ httpd-admin.base=http://127.0.0.1:82/
 darkstat.port=667
 darkstat.niceness=19
 system.default.niceness=-3
-
+# async request timeout
+async.timeout=7200000
 # see tech.log
 ehcache.spring.name=spring-cache
