renamed ProdJdbcDsTestConfig to HbmProdJdbcDsTestConfig

--- a/pom.xml
+++ b/pom.xml
@@ -972,7 +972,7 @@
                 <junit4.storage-impl-hbm.groups>
                     image.persistence.repository.springtestconfig.HbmInMemoryDbTestConfig.class,
                     image.persistence.repository.springtestconfig.TestJdbcDsTestConfig.class,
-                    image.persistence.repository.springtestconfig.ProdJdbcDsTestConfig.class
+                    image.persistence.repository.springtestconfig.HbmProdJdbcDsTestConfig.class
                 </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
@@ -982,7 +982,7 @@
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
                     image.persistence.repository.springtestconfig.TestJdbcDsTestConfig,
-                    image.persistence.repository.springtestconfig.ProdJdbcDsTestConfig,
+                    image.persistence.repository.springtestconfig.HbmProdJdbcDsTestConfig,
                     junit5&amp;hbm&amp;inmemorydb
                 </junit5.storage-impl-hbm.groups>
                 <junit5.photos.groups>
@@ -1003,7 +1003,7 @@
                 <junit4.storage-impl-hbm.groups>
                     image.persistence.repository.springtestconfig.HbmInMemoryDbTestConfig.class,
                     image.persistence.repository.springtestconfig.TestJdbcDsTestConfig.class,
-                    image.persistence.repository.springtestconfig.ProdJdbcDsTestConfig.class
+                    image.persistence.repository.springtestconfig.HbmProdJdbcDsTestConfig.class
                 </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
@@ -1013,7 +1013,7 @@
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
                     image.persistence.repository.springtestconfig.TestJdbcDsTestConfig,
-                    image.persistence.repository.springtestconfig.ProdJdbcDsTestConfig,
+                    image.persistence.repository.springtestconfig.HbmProdJdbcDsTestConfig,
                     junit5&amp;hbm&amp;inmemorydb
                 </junit5.storage-impl-hbm.groups>
                 <junit5.photos.groups>
