--- a/pom.xml
+++ b/pom.xml
@@ -942,7 +942,7 @@
                     org.junit.Test.class means "no category"
                 -->
                 <junit4.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.HbmInMemoryDbTestConfig.class
+                    image.persistence.repository.springtestconfig.HbmInMemoryDsConfig.class
                 </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
@@ -970,9 +970,9 @@
             <id>local-db</id>
             <properties>
                 <junit4.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.HbmInMemoryDbTestConfig.class,
-                    image.persistence.repository.springtestconfig.HbmStagingJdbcDsTestConfig.class,
-                    image.persistence.repository.springtestconfig.HbmProdJdbcDsTestConfig.class
+                    image.persistence.repository.springtestconfig.HbmInMemoryDsConfig.class,
+                    image.persistence.repository.springtestconfig.HbmStagingJdbcDsConfig.class,
+                    image.persistence.repository.springtestconfig.HbmProdJdbcDsConfig.class
                 </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
@@ -981,8 +981,8 @@
                     image.photos.springtestconfig.ProdJdbcDsPhotosTestConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.HbmStagingJdbcDsTestConfig,
-                    image.persistence.repository.springtestconfig.HbmProdJdbcDsTestConfig,
+                    image.persistence.repository.springtestconfig.HbmStagingJdbcDsConfig,
+                    image.persistence.repository.springtestconfig.HbmProdJdbcDsConfig,
                     junit5&amp;hbm&amp;inmemorydb
                 </junit5.storage-impl-hbm.groups>
                 <junit5.photos.groups>
@@ -1001,9 +1001,9 @@
             <id>remote-db</id>
             <properties>
                 <junit4.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.HbmInMemoryDbTestConfig.class,
-                    image.persistence.repository.springtestconfig.HbmStagingJdbcDsTestConfig.class,
-                    image.persistence.repository.springtestconfig.HbmProdJdbcDsTestConfig.class
+                    image.persistence.repository.springtestconfig.HbmInMemoryDsConfig.class,
+                    image.persistence.repository.springtestconfig.HbmStagingJdbcDsConfig.class,
+                    image.persistence.repository.springtestconfig.HbmProdJdbcDsConfig.class
                 </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
@@ -1012,8 +1012,8 @@
                     image.photos.springtestconfig.ProdJdbcDsPhotosTestConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.HbmStagingJdbcDsTestConfig,
-                    image.persistence.repository.springtestconfig.HbmProdJdbcDsTestConfig,
+                    image.persistence.repository.springtestconfig.HbmStagingJdbcDsConfig,
+                    image.persistence.repository.springtestconfig.HbmProdJdbcDsConfig,
                     junit5&amp;hbm&amp;inmemorydb
                 </junit5.storage-impl-hbm.groups>
                 <junit5.photos.groups>
