renamed ***Ds*** to ***Db*** for hbm spring profiles and config

--- a/pom.xml
+++ b/pom.xml
@@ -942,7 +942,7 @@
                     org.junit.Test.class means "no category"
                 -->
                 <junit4.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.HbmInMemoryDsConfig.class
+                    image.persistence.repository.springtestconfig.HbmInMemoryDbConfig.class
                 </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
@@ -970,8 +970,8 @@
             <id>local-db</id>
             <properties>
                 <junit4.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.HbmInMemoryDsConfig.class,
-                    image.persistence.repository.springtestconfig.HbmStagingJdbcDsConfig.class,
+                    image.persistence.repository.springtestconfig.HbmInMemoryDbConfig.class,
+                    image.persistence.repository.springtestconfig.HbmStagingJdbcDbConfig.class,
                     image.persistence.repository.springtestconfig.HbmProdJdbcDsConfig.class
                 </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
@@ -981,7 +981,7 @@
                     image.photos.springtestconfig.ProdJdbcDsPhotosTestConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.HbmStagingJdbcDsConfig,
+                    image.persistence.repository.springtestconfig.HbmStagingJdbcDbConfig,
                     image.persistence.repository.springtestconfig.HbmProdJdbcDsConfig,
                     junit5&amp;hbm&amp;inmemorydb
                 </junit5.storage-impl-hbm.groups>
@@ -1001,8 +1001,8 @@
             <id>remote-db</id>
             <properties>
                 <junit4.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.HbmInMemoryDsConfig.class,
-                    image.persistence.repository.springtestconfig.HbmStagingJdbcDsConfig.class,
+                    image.persistence.repository.springtestconfig.HbmInMemoryDbConfig.class,
+                    image.persistence.repository.springtestconfig.HbmStagingJdbcDbConfig.class,
                     image.persistence.repository.springtestconfig.HbmProdJdbcDsConfig.class
                 </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
@@ -1012,7 +1012,7 @@
                     image.photos.springtestconfig.ProdJdbcDsPhotosTestConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.HbmStagingJdbcDsConfig,
+                    image.persistence.repository.springtestconfig.HbmStagingJdbcDbConfig,
                     image.persistence.repository.springtestconfig.HbmProdJdbcDsConfig,
                     junit5&amp;hbm&amp;inmemorydb
                 </junit5.storage-impl-hbm.groups>
