renamed InMemoryDbPhotosConfig to PhotosInMemoryDbConfig

--- a/pom.xml
+++ b/pom.xml
@@ -947,7 +947,7 @@
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
                     image.photos.JsonMapperConfig.class,
-                    image.photos.springtestconfig.InMemoryDbPhotosConfig.class
+                    image.photos.springtestconfig.PhotosInMemoryDbConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
                     junit5&amp;hbm&amp;inmemorydb
@@ -955,7 +955,7 @@
                 <junit5.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory,
                     image.photos.JsonMapperConfig,
-                    image.photos.springtestconfig.InMemoryDbPhotosConfig,
+                    image.photos.springtestconfig.PhotosInMemoryDbConfig,
                     junit5&amp;photos&amp;inmemorydb,
                     junit5&amp;photos&amp;misc
                 </junit5.photos.groups>
@@ -977,7 +977,7 @@
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
                     image.photos.JsonMapperConfig.class,
-                    image.photos.springtestconfig.InMemoryDbPhotosConfig.class,
+                    image.photos.springtestconfig.PhotosInMemoryDbConfig.class,
                     image.photos.springtestconfig.PhotosProdJdbcDbConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
@@ -988,7 +988,7 @@
                 <junit5.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory,
                     image.photos.JsonMapperConfig,
-                    image.photos.springtestconfig.InMemoryDbPhotosConfig,
+                    image.photos.springtestconfig.PhotosInMemoryDbConfig,
                     image.photos.springtestconfig.PhotosProdJdbcDbConfig,
                     junit5&amp;photos&amp;inmemorydb,
                     misc
@@ -1008,7 +1008,7 @@
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
                     image.photos.JsonMapperConfig.class,
-                    image.photos.springtestconfig.InMemoryDbPhotosConfig.class,
+                    image.photos.springtestconfig.PhotosInMemoryDbConfig.class,
                     image.photos.springtestconfig.PhotosProdJdbcDbConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
@@ -1019,7 +1019,7 @@
                 <junit5.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory,
                     image.photos.JsonMapperConfig,
-                    image.photos.springtestconfig.InMemoryDbPhotosConfig,
+                    image.photos.springtestconfig.PhotosInMemoryDbConfig,
                     image.photos.springtestconfig.PhotosProdJdbcDbConfig,
                     junit5&amp;photos&amp;inmemorydb,
                     misc
