--- a/pom.xml
+++ b/pom.xml
@@ -942,7 +942,7 @@
                     org.junit.Test.class means "no category"
                 -->
                 <junit4.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.HbmInMemoryDbConfig.class
+                    image.persistence.repository.springconfig.HbmInMemoryDbConfig.class
                 </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
@@ -970,9 +970,9 @@
             <id>local-db</id>
             <properties>
                 <junit4.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.HbmInMemoryDbConfig.class,
-                    image.persistence.repository.springtestconfig.HbmStagingJdbcDbConfig.class,
-                    image.persistence.repository.springtestconfig.HbmProdJdbcDsConfig.class
+                    image.persistence.repository.springconfig.HbmInMemoryDbConfig.class,
+                    image.persistence.repository.springconfig.HbmStagingJdbcDbConfig.class,
+                    image.persistence.repository.springconfig.HbmProdJdbcDsConfig.class
                 </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
@@ -981,8 +981,8 @@
                     image.photos.springconfig.PhotosProdJdbcDbConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.HbmStagingJdbcDbConfig,
-                    image.persistence.repository.springtestconfig.HbmProdJdbcDsConfig,
+                    image.persistence.repository.springconfig.HbmStagingJdbcDbConfig,
+                    image.persistence.repository.springconfig.HbmProdJdbcDsConfig,
                     junit5&amp;hbm&amp;inmemorydb
                 </junit5.storage-impl-hbm.groups>
                 <junit5.photos.groups>
@@ -1001,9 +1001,9 @@
             <id>remote-db</id>
             <properties>
                 <junit4.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.HbmInMemoryDbConfig.class,
-                    image.persistence.repository.springtestconfig.HbmStagingJdbcDbConfig.class,
-                    image.persistence.repository.springtestconfig.HbmProdJdbcDsConfig.class
+                    image.persistence.repository.springconfig.HbmInMemoryDbConfig.class,
+                    image.persistence.repository.springconfig.HbmStagingJdbcDbConfig.class,
+                    image.persistence.repository.springconfig.HbmProdJdbcDsConfig.class
                 </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
@@ -1012,8 +1012,8 @@
                     image.photos.springconfig.PhotosProdJdbcDbConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
-                    image.persistence.repository.springtestconfig.HbmStagingJdbcDbConfig,
-                    image.persistence.repository.springtestconfig.HbmProdJdbcDsConfig,
+                    image.persistence.repository.springconfig.HbmStagingJdbcDbConfig,
+                    image.persistence.repository.springconfig.HbmProdJdbcDsConfig,
                     junit5&amp;hbm&amp;inmemorydb
                 </junit5.storage-impl-hbm.groups>
                 <junit5.photos.groups>
