--- a/pom.xml
+++ b/pom.xml
@@ -950,6 +950,7 @@
                     image.photos.springconfig.PhotosInMemoryDbConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
+                    image.persistence.repository.springconfig.HbmInMemoryDbConfig,
                     junit5&amp;hbm&amp;inmemorydb
                 </junit5.storage-impl-hbm.groups>
                 <junit5.photos.groups>
@@ -972,26 +973,34 @@
                 <junit4.storage-impl-hbm.groups>
                     image.persistence.repository.springconfig.HbmInMemoryDbConfig.class,
                     image.persistence.repository.springconfig.HbmStagingJdbcDbConfig.class,
-                    image.persistence.repository.springconfig.HbmProdJdbcDsConfig.class
+                    image.persistence.repository.springconfig.HbmProdJdbcDbConfig.class
                 </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
                     image.photos.JsonMapperConfig.class,
                     image.photos.springconfig.PhotosInMemoryDbConfig.class,
+                    image.photos.springconfig.PhotosStagingJdbcDbConfig.class,
                     image.photos.springconfig.PhotosProdJdbcDbConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
+                    image.persistence.repository.springconfig.HbmInMemoryDbConfig,
                     image.persistence.repository.springconfig.HbmStagingJdbcDbConfig,
-                    image.persistence.repository.springconfig.HbmProdJdbcDsConfig,
-                    junit5&amp;hbm&amp;inmemorydb
+                    image.persistence.repository.springconfig.HbmProdJdbcDbConfig,
+                    junit5&amp;hbm&amp;inmemorydb,
+                    junit5&amp;hbm&amp;staging,
+                    junit5&amp;hbm&amp;production,
+                    junit5&amp;hbm&amp;misc
                 </junit5.storage-impl-hbm.groups>
                 <junit5.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory,
                     image.photos.JsonMapperConfig,
                     image.photos.springconfig.PhotosInMemoryDbConfig,
+                    image.photos.springconfig.PhotosStagingJdbcDbConfig,
                     image.photos.springconfig.PhotosProdJdbcDbConfig,
                     junit5&amp;photos&amp;inmemorydb,
-                    misc
+                    junit5&amp;photos&amp;staging,
+                    junit5&amp;photos&amp;production,
+                    junit5&amp;photos&amp;misc
                 </junit5.photos.groups>
                 <db.host>127.0.0.1</db.host>
                 <test.db.host>127.0.0.1</test.db.host>
@@ -1003,26 +1012,34 @@
                 <junit4.storage-impl-hbm.groups>
                     image.persistence.repository.springconfig.HbmInMemoryDbConfig.class,
                     image.persistence.repository.springconfig.HbmStagingJdbcDbConfig.class,
-                    image.persistence.repository.springconfig.HbmProdJdbcDsConfig.class
+                    image.persistence.repository.springconfig.HbmProdJdbcDbConfig.class
                 </junit4.storage-impl-hbm.groups>
                 <junit4.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory.class,
                     image.photos.JsonMapperConfig.class,
                     image.photos.springconfig.PhotosInMemoryDbConfig.class,
+                    image.photos.springconfig.PhotosStagingJdbcDbConfig.class,
                     image.photos.springconfig.PhotosProdJdbcDbConfig.class
                 </junit4.photos.groups>
                 <junit5.storage-impl-hbm.groups>
+                    image.persistence.repository.springconfig.HbmInMemoryDbConfig,
                     image.persistence.repository.springconfig.HbmStagingJdbcDbConfig,
-                    image.persistence.repository.springconfig.HbmProdJdbcDsConfig,
-                    junit5&amp;hbm&amp;inmemorydb
+                    image.persistence.repository.springconfig.HbmProdJdbcDbConfig,
+                    junit5&amp;hbm&amp;inmemorydb,
+                    junit5&amp;hbm&amp;staging,
+                    junit5&amp;hbm&amp;production,
+                    junit5&amp;hbm&amp;misc
                 </junit5.storage-impl-hbm.groups>
                 <junit5.photos.groups>
                     image.photos.junit4.misc.MiscTestCategory,
                     image.photos.JsonMapperConfig,
                     image.photos.springconfig.PhotosInMemoryDbConfig,
+                    image.photos.springconfig.PhotosStagingJdbcDbConfig,
                     image.photos.springconfig.PhotosProdJdbcDbConfig,
                     junit5&amp;photos&amp;inmemorydb,
-                    misc
+                    junit5&amp;photos&amp;staging,
+                    junit5&amp;photos&amp;production,
+                    junit5&amp;photos&amp;misc
                 </junit5.photos.groups>
                 <db.host>adrhc.go.ro</db.host>
                 <test.db.host>adrhc.go.ro</test.db.host>
