--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>image</groupId>
@@ -102,6 +102,12 @@
             <dependency>
                 <groupId>exifweb</groupId>
                 <artifactId>cdm</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>exifweb</groupId>
+                <artifactId>util</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -1054,6 +1060,7 @@
     </profiles>
 
     <modules>
+        <module>util</module>
         <!-- cdm = common data model -->
         <module>cdm</module>
         <module>storage-entities</module>
