--- a/storage-impl-hbm/pom.xml
+++ b/storage-impl-hbm/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+         xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>image</groupId>
@@ -14,6 +14,10 @@
     <name>storage-impl-hbm</name>
     <url>http://maven.apache.org</url>
     <dependencies>
+        <dependency>
+            <groupId>exifweb</groupId>
+            <artifactId>util</artifactId>
+        </dependency>
         <dependency>
             <groupId>exifweb</groupId>
             <artifactId>cdm</artifactId>
