--- a/storage-api/pom.xml
+++ b/storage-api/pom.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-		 xmlns="http://maven.apache.org/POM/4.0.0"
-		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>image</groupId>
-		<artifactId>exifweb</artifactId>
-		<version>1.0-SNAPSHOT</version>
-	</parent>
-	<groupId>exifweb</groupId>
-	<artifactId>storage-api</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<name>storage-api</name>
-	<url>http://maven.apache.org</url>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+         xmlns="http://maven.apache.org/POM/4.0.0">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>image</groupId>
+        <artifactId>exifweb</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    <groupId>exifweb</groupId>
+    <artifactId>storage-api</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <name>storage-api</name>
+    <url>http://maven.apache.org</url>
 
     <dependencies>
         <dependency>
@@ -22,10 +22,6 @@
         <dependency>
             <groupId>exifweb</groupId>
             <artifactId>storage-entities</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
         </dependency>
     </dependencies>
 </project>
