+ HibernatePropertiesConfig and DataSourceConfig using PropertiesFactoryBeanEx

--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,11 @@
 
             <dependency>
                 <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
                 <version>${springframework.version}</version>
             </dependency>
