--- a/storage-impl-hbm/src/main/resources/hibernate-common.properties
+++ b/storage-impl-hbm/src/main/resources/hibernate-common.properties
@@ -11,7 +11,7 @@ hibernate.cache.use_second_level_cache=true
 hibernate.cache.use_query_cache=true
 # hbm 4x
 hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
-# hbm 3.3 and higher?
+# hbm versions [3.3, 4.x)
 #hibernate.cache.region.factory_class=net.sf.ehcache.hibernate.EhCacheRegionFactory
 # default is ehcache.xml
 #net.sf.ehcache.configurationResourceName.in_memory_db=ehcache-in_memory_db.xml
